--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "convex": "^1.9.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.2"
